--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "leetcli",
-  "version": "0.0.5",
-  "description": "leetcode 刷题工具",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/evercyan/leetcli.git"
-  },
-  "keywords": [
-    "leetcode"
-  ],
-  "author": "Cyan",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/evercyan/leetcli/issues"
-  },
-  "homepage": "https://github.com/evercyan/leetcli#readme"
+    "name": "leetcli",
+    "version": "0.0.5",
+    "description": "leetcode 刷题工具",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/evercyan/leetcli.git"
+    },
+    "keywords": [
+        "leetcode"
+    ],
+    "author": "Cyan",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/evercyan/leetcli/issues"
+    },
+    "homepage": "https://github.com/evercyan/leetcli#readme"
 }
